Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,7 @@ stages:
             provider: 'azurerm'
             command: 'init'
             workingDirectory: '$(System.DefaultWorkingDirectory)/Environment/Dev'
+            backendAzureRmUseEntraIdForAuthentication: false
             backendServiceArm: 'Pipeline'
             backendAzureRmOverrideSubscriptionID: '009fad33-c09c-4841-af38-57dd79870d40'
             backendAzureRmResourceGroupName: 'ajay1122'
@@ -96,6 +97,7 @@ stages:
             provider: 'azurerm'
             command: 'init'
             workingDirectory: '$(System.DefaultWorkingDirectory)/Environment/Dev'
+            backendAzureRmUseEntraIdForAuthentication: false
             backendServiceArm: 'Pipeline'
             backendAzureRmOverrideSubscriptionID: '009fad33-c09c-4841-af38-57dd79870d40'
             backendAzureRmResourceGroupName: 'ajay1122'
