--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,18 @@ stages:
             outputTo: 'console'
             environmentServiceNameAzureRM: 'Pipeline'
 
+  - stage: Scan
+    displayName: Scan
+    jobs:
+      - job: Scan
+        displayName: "Scan"
+        steps:
+        - task: tfsec@1
+          inputs:
+            version: 'v1.26.0'
+            args: 'skipTfsec = true'
+            dir: '$(System.DefaultWorkingDirectory)/'
+
   - stage: plan
     displayName: plan
     jobs:
