--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,11 +50,13 @@ stages:
       - job: Scan
         displayName: "Scan"
         steps:
-        - task: tfsec@1
-          inputs:
-            version: 'v1.26.0'
-            args: 'skipTfsec = true'
-            dir: '$(System.DefaultWorkingDirectory)/'
+          - task: tfsec@1
+            displayName: scanning
+            condition: ne(variables['skipTfsec'], 'true')
+            inputs:
+              version: 'v1.26.0'
+              dir: '$(System.DefaultWorkingDirectory)/'
+
 
   - stage: plan
     displayName: plan
